<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@drawable/background"
>
    <RadioButton
            android:text="@string/atm_pressure"
            android:layout_width="313dp"
            android:layout_height="35dp" app:layout_constraintStart_toStartOf="@+id/guideline"
            android:id="@+id/atm_pressure"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="208dp"
            android:fontFamily="@font/arbutus_slab"
            android:textColor= "@color/colorYellow"
            android:textSize="16sp"
    />
    <RadioButton
            android:text="@string/wind_speed"
            android:layout_width="313dp"
            android:layout_height="35dp" app:layout_constraintStart_toStartOf="@+id/guideline"
            android:id="@+id/wind_speed"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="252dp"
            android:fontFamily="@font/arbutus_slab"
            android:textColor="@color/colorYellow"
            android:textSize="16sp"
    />
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline" app:layout_constraintGuide_begin="20dp"
                                                android:orientation="vertical"/>
    <TextView
            android:text="@string/choose_location"
            android:fontFamily="@font/arbutus_slab"
            android:textSize="24sp"
            android:textColor="@color/colorYellow"
            android:layout_width="313dp"
            android:layout_height="43dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" android:id="@+id/textView" tools:layout_editor_absoluteX="26dp"
            tools:ignore="MissingConstraints"/>
    <EditText
            android:layout_width="321dp"
            android:layout_height="48dp"
            android:inputType="textPersonName"
            android:hint="@string/your_location"
            android:ems="10"
            android:id="@+id/editTextLocation"
            app:layout_constraintStart_toStartOf="@+id/guideline" app:layout_constraintTop_toBottomOf="@+id/textView"
            android:fontFamily="@font/arbutus_slab"
            android:textSize="16sp"
    />
</androidx.constraintlayout.widget.ConstraintLayout>