<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity"
            android:background="@drawable/background">

    <androidx.recyclerview.widget.RecyclerView
            tools:ignore="MissingConstraints"
            android:id="@+id/short_time_weather"
            app:layout_constraintTop_toBottomOf="@+id/temperature" android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@+id/weatherImg" android:layout_marginStart="28dp"
            android:layout_width="205dp"
            android:layout_height="45dp"
            tools:itemCount="3" tools:listitem="@layout/short_weather" android:clipChildren="true"
            android:clipToPadding="true"/>
    <TextView
                android:layout_width="195dp"
                android:layout_height="38dp"
                android:text="@string/location_stub1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:fontFamily="@font/arbutus_slab"
                app:layout_constraintHorizontal_bias="0.144" app:layout_constraintVertical_bias="0.09"
                android:textSize="24sp" android:typeface="normal"
                android:textColor="@color/colorYellow"
                android:id="@+id/location"
        />
        <ImageView
                android:layout_width="116dp"
                android:layout_height="109dp" app:srcCompat="@drawable/ic_sunny" android:id="@+id/weatherImg"
                app:layout_constraintStart_toStartOf="@+id/location" app:layout_constraintTop_toBottomOf="@+id/location"
                android:layout_marginTop="16dp"
        />
        <CalendarView
                android:layout_width="352dp"
                android:layout_height="306dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:id="@+id/calendarView"
                tools:ignore="MissingConstraints"
                app:layout_constraintTop_toBottomOf="@+id/weatherImg" android:layout_marginTop="32dp"
                app:layout_constraintHorizontal_bias="0.525"/>
    <TextView
            android:layout_width="206dp"
            android:layout_height="59dp"
            android:text=""
            android:ems="10"
            android:id="@+id/temperature"
            app:layout_constraintStart_toEndOf="@+id/weatherImg" android:layout_marginStart="28dp"
            android:textColor="@color/colorYellow"
            android:textAlignment="textStart"
            android:fontFamily="@font/arbutus_slab"
            android:textSize="36sp" android:typeface="normal"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/location" android:layout_marginTop="16dp"
    />
    <Button
                android:text="@string/citi_btn"
                android:layout_width="234dp"
                android:layout_height="48dp" android:id="@+id/citi_btn"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="28dp"
                android:fontFamily="@font/arbutus_slab"
        />
        <Button
                android:text="@string/wiki_caption"
                android:layout_width="88dp"
                android:layout_height="41dp" android:id="@+id/wiki"
                app:layout_constraintStart_toEndOf="@+id/location"
                android:layout_marginStart="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.023" app:layout_constraintTop_toTopOf="@+id/location"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
